# bad-apple

./: Cargo.toml  README.md  script.js
lyrics/: transcript_es.srt
src/: lib.rs  rectframes.rs  subs.rs
