[package]
name = "bad-apple"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
image = "0.25.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# server deps
actix-web = "4.12.1"
actix-files = "0.6.9"
actix-cors = "0.7.1"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
